src/test/ui/proc-macro/attr-stmt-expr.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:10:5
   |
LL |     #[expect_print_expr]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/15701
   = help: add #![feature(stmt_expr_attributes)] to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/attr-stmt-expr.rs:23:5
   |
LL |     #[expect_expr]
   |     ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/15701
   = help: add #![feature(stmt_expr_attributes)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
